@@ -43,6 +43,7 @@ features:
 - additional vbc output added: branching information is printed earlier and also for nodes which were cut off
 - added new statistic which distinguish between internal nodes and leaves which got processed
 - added reader_pbm, which writes the matrix structure in pbm format (possibly scaled to given size)
+- added possibility to separate a cutpool w.r.t. given solution (instead of LP-solution)
 
 performance improvements:
 - conflict consisting of exactly two binary variables will be handled as set-packing constraint instead of an logicor
@@ -84,6 +85,7 @@ interface
 - new function SCIPselectVarStrongBranching() to get the variable that fullstrongbranching would select
 - SCIPcalcMIR() takes an additional parameter sidetypes to determine which side of the rows to use (relevant for ranged rows)
 - New methods SCIPconshdlrIncNCutsFound(), SCIPsepaIncNCutsFound(), and SCIPsepaIncNCutsFoundAtNode() to increase the number of found cuts
+- added function SCIPseparateSolCutpool() to separate a cutpool w.r.t. a given solution
 
 parameters:
 - new parameter <lp/disablecutoff> (default FALSE), by which the LP cutoff bound can be disabled (when set to TRUE)
